--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
     "node-wrap": "^0.1.2",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "svjsl": "^1.6.6",
     "xmlhttprequest": "^1.8.0"
   }
