--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "discord-rpc": "^3.0.1",
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
-    "node-wrap": "^0.1.2",
-    "svjsl": "^1.6.6",
+    "node-wrap": "^0.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
+    "svjsl": "^1.7.0",
     "xmlhttprequest": "^1.8.0"
   }
 }
